build_PitBoxUpdater_stderr.txt
126 INFO: PyInstaller: 6.11.0, contrib hooks: 2026.0
126 INFO: Python: 3.11.9
135 INFO: Platform: Windows-10-10.0.26200-SP0
135 INFO: Python environment: C:\PitBox\dev\pitbox\.venv
138 INFO: Removing temporary files and cleaning cache in C:\Users\info\AppData\Local\pyinstaller
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\PitBox\dev\pitbox\.venv\Lib\site-packages\PyInstaller\__main__.py", line 321, in <module>
    run()
  File "C:\PitBox\dev\pitbox\.venv\Lib\site-packages\PyInstaller\__main__.py", line 215, in run
    run_build(pyi_config, spec_file, **vars(args))
  File "C:\PitBox\dev\pitbox\.venv\Lib\site-packages\PyInstaller\__main__.py", line 70, in run_build
    PyInstaller.building.build_main.main(pyi_config, spec_file, **kwargs)
  File "C:\PitBox\dev\pitbox\.venv\Lib\site-packages\PyInstaller\building\build_main.py", line 1252, in main
    build(specfile, distpath, workpath, clean_build)
  File "C:\PitBox\dev\pitbox\.venv\Lib\site-packages\PyInstaller\building\build_main.py", line 1189, in build
    code = compile(f.read(), spec, 'exec')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "PitBoxUpdater.spec", line 5
    """
       ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 122-123: truncated \uXXXX escape
